<resources>
    <string name="app_name">Yummy</string>
    <string name="nombre">Nombre Completo</string>
    <string name="prompt_nombre">Nombre Completo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_registro">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="bienvenida">¡Bienvenido a Yummy!</string>
    <string name="registro">¡Regístrate en Yummy!</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="loginanuncio">O inicia sesión con una red social</string>
    <string name="iniciasesion">Inicia Sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="terminosycondiciones">Acepto los Términos de Servicio y Políticas de Privacidad</string>
    <string name="cuenta">¿Tienes una cuenta? Inicia Sesión</string>
    <string name="title_activity_menuprincipal">activity_menuprincipal</string>
    <string name="titulo_menu">Menú</string>
    <string name="titulo_carrito">Carrito</string>
    <string name="titulo_configuracion">Configuración</string>
    <string name="titulo_cuenta">Mi cuenta</string>
    <string name="platillos">Platillos</string>
    <string name="idioma">Idioma: Español</string>
    <string name="version">Versión 1.0</string>
    <string name="terminosdeservicio">Términos de Servicio</string>
    <string name="politicasprivacidad">Políticas de Privacidad</string>
    <string name="metodospago">Métodos de Pago</string>
    <string name="direcciones">Direcciones</string>
    <string name="pedidos">Pedidos</string>
    <string name="serviciocliente">Servicio al Cliente</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="atencioncliente">Atención al cliente</string>
    <string name="asunto">Asunto del problema: </string>
    <string name="motivo">Explíquenos el motivo de su problema:</string>
    <string name="enviar">Enviar Reporte</string>
    <string name="direccion">Dirección</string>
    <string name="calle">Calle</string>
    <string name="numero">Número</string>
    <string name="entreCalles">Entre Calles</string>
    <string name="referencia">Referencia</string>
    <string name="numeroTarjeta">Número de la Tarjeta</string>
    <string name="claveTarjeta">Clave de la Tarjeta</string>
    <string name="fechaTarjeta">Fecha de la Tarjeta</string>
    <string name="colonia">Colonia</string>
    <string name="codigopostal">Código Postal</string>
    <string name="guardar">Guardar</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjetacredito">Tarjeta de crédito</string>
</resources>