<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".activity_registro">

    <TextView
        android:id="@+id/tv_registro"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/registrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrate"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@+id/tv_registro"/>

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/registrate"/>
    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_nombre"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre"/>

    <TextView
        android:id="@+id/tv_emailregistro"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre"/>

    <EditText
        android:id="@+id/et_emailregistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailregistro"/>

    <TextView
        android:id="@+id/tv_contrasenaregistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="@string/contrasena"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/et_emailregistro"/>

    <EditText
        android:id="@+id/et_contrasenaregistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_contrasenaregistro" />

    <CheckBox
        android:id="@+id/checkbox_terminoscondiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminosycondiciones"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasenaregistro"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_registro"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/action_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_terminoscondiciones"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="@string/cuenta"
        app:layout_constraintTop_toBottomOf="@+id/btn_registro"/>

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_contrasenaregistro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>