<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".activity_direcciones">

    <TextView
        android:id="@+id/tv_direccion"
        android:text="@string/direccion"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_calle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calle"
        android:textSize="25dp"
        android:fontFamily="serif"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_direccion"/>

    <EditText
        android:id="@+id/et_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero"
        android:inputType="number"
        android:textSize="25dp"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/et_calle"/>
    <EditText
        android:id="@+id/et_colonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/colonia"
        android:textSize="25dp"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/et_numero"/>

    <EditText
        android:id="@+id/et_codigopostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:fontFamily="serif"
        android:hint="@string/codigopostal"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/et_colonia"/>

    <Button
        android:id="@+id/btn_guardardireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:backgroundTint="@color/teal_700"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/et_codigopostal"/>


</androidx.constraintlayout.widget.ConstraintLayout>