<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_inicio"
        android:text="@string/bienvenida"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/iniciasesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciasesion"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@+id/tv_inicio"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/iniciasesion"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"/>
    <TextView
        android:id="@+id/tv_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="@string/contrasena"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"/>
    <EditText
        android:id="@+id/et_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_contrasena" />

    <Button
        android:id="@+id/btn_login"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasena"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_anuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="@string/loginanuncio"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

    //boton de inicio de sesion con google

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_contrasena"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>