<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="espinoza.ariana.yummy.ui.menu.HomeFragment"
        android:label="@string/titulo_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="espinoza.ariana.yummy.ui.carrito.DashboardFragment"
        android:label="@string/titulo_carrito"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="espinoza.ariana.yummy.ui.configuracion.NotificationsFragment"
        android:label="@string/titulo_configuracion"
        tools:layout="@layout/fragment_configuracion" />
</navigation>