<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tv_metodospago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_account_balance_24"
        android:fontFamily="serif"
        android:text="@string/metodospago"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/tv_direcciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/direcciones"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_baseline_home_24"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_metodospago"
        />

    <TextView
        android:id="@+id/tv_pedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedidos"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:fontFamily="serif"
        android:drawableLeft="@drawable/ic_baseline_assignment_24"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_direcciones"/>

    <TextView
        android:id="@+id/tv_servicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serviciocliente"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:fontFamily="serif"
        android:drawableLeft="@drawable/ic_baseline_record_voice_over_24"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pedidos"/>

    <Button
        android:id="@+id/btn_cerrarsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrarsesion"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_servicio"
        />

</androidx.constraintlayout.widget.ConstraintLayout>