<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".ServicioAlClienteActivity">

    <TextView
        android:id="@+id/tv_atencioncliente"
        android:text="@string/atencioncliente"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asunto"
        android:fontFamily="serif"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_atencioncliente" />

    <EditText
        android:id="@+id/et_asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@+id/tv_asunto"/>

    <TextView
        android:id="@+id/tv_motivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motivo"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@+id/et_asunto" />

    <EditText
        android:id="@+id/et_motivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:fontFamily="serif"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_motivo"/>

    <Button
        android:id="@+id/btn_guardareporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:backgroundTint="@color/teal_700"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/et_motivo"/>

</androidx.constraintlayout.widget.ConstraintLayout>