<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".activity_metodospago">

    <TextView
        android:id="@+id/tv_metodopago"
        android:text="@string/metodospago"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/opcionespago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_metodopago">
        <RadioButton android:id="@+id/opcionefectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efectivo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/opciontarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarjetacredito"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_tarjeta"
        android:text="@string/tarjetacredito"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/opcionespago" />

</androidx.constraintlayout.widget.ConstraintLayout>